changing homepage text

--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
   </div>
 
   <div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
-      <p id="aboutme_text">Hi, I'm Paul. I graduated from Duke University in 2014 with a degree in Literature and Visual Arts. While interning, I was fortunate enough to find development work, even though I started out as a writer. Since then, I've been looking to work in tech. I'm fascinated by programming in general and by the potential of API consumption, D3 Javascript, and interactivity in particular.
+    <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<!--       <p id="aboutme_text">Hi, I'm Paul. I graduated from Duke University in 2014 with a degree in Literature and Visual Arts. While interning, I was fortunate enough to find development work, even though I started out as a writer. Since then, I've been looking to work in tech. I'm fascinated by programming in general and by the potential of API consumption, D3 Javascript, and interactivity in particular.
       <br>
       <br>
       I follow basketball and soccer, and am looking forward to seeing how Anthony Davis and Neymar play this year. Moreover, I'm curious to see if Neymar's future stats will look <a id="a_underlined" href="http://fivethirtyeight.com/features/lionel-messi-is-impossible/">anything like Messi's</a> and would like to model as much on my own.
       <br>
       <br>
       Additionally, I tutor reading and writing and would like to write about tech. I hope to use my visual arts background to do front-end work as well. When I get too wound up pursuing these things in tandem, I like to unwind by doing yoga.</p>
-  </div>
+   --></div>
 
 </body>
 </html>
