--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
   <title></title>
-  <link href="/WDI_Exercise/wdiexercise.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css"
-   href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
+  <link href="wdiexercise.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
 </head>
 <body>
 
