--- a/artdesign.html
+++ b/artdesign.html
@@ -2,24 +2,25 @@
 <html lang="en">
 <head>
 	<title></title>
-	<link href="/WDI_Exercise/wdiexercise.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" 
+	<link href="wdiexercise.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css"
 	href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
 </head>
 <body>
 	<div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
 		<p id="name">P. Chubinskiy</p>
-	    <p><a href="/WDI_Exercise/aboutme.html">About Me</a></p>
-	    <p><a href="/WDI_Exercise/artdesign.html">Visual Art & Design</a></p>
-	    <p><a href="/WDI_Exercise/alias.html">Web 1.0 Alias</a></p>
-	    <p><a href="/WDI_Exercise/contact.html">Contact</a></p>
+    <p><a href="/WDI_Exercise/aboutme.html">About Me</a></p>
+    <p><a href="/WDI_Exercise/code.html">Code</a></p>
+    <p><a href="/WDI_Exercise/writing.html">Writing</a></p>
+    <p><a href="/WDI_Exercise/artdesign.html">Visual Art & Design</a></p>
+    <p><a href="/WDI_Exercise/contact.html">Contact</a></p>
   </div>
 
    <div id="content" class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
-		<img src="/WDI_Exercise/noexitcover.jpg" style="width: 40%;">
-		<img src="/WDI_Exercise/collage.jpg" style="width: 40%;">
-		<img src="/WDI_Exercise/wccccatering.png" style="width: 40%;">
-		<img src="/WDI_Exercise/wccclogoletters.png" style="width: 40%;">
+		<img src="noexitcover.jpg" style="width: 40%;">
+		<img src="collage.jpg" style="width: 40%;">
+		<img src="wccccatering.png" style="width: 40%;">
+		<img src="wccclogoletters.png" style="width: 40%;">
 	</div>
 </body>
 </html>
