--- a/contact.html
+++ b/contact.html
@@ -2,26 +2,26 @@
 <html lang="en">
 <head>
 	<title></title>
-	<link href="/WDI_Exercise/wdiexercise.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" 
+	<link href="wdiexercise.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css"
 	href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
 </head>
 <body>
 	<div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-	<p id="name">P. Chubinskiy</p>
-	<p><a href="/WDI_Exercise/aboutme.html">About Me</a></p>
-	<p><a href="/WDI_Exercise/artdesign.html">Visual Art & Design</a></p>
-	<p><a href="/WDI_Exercise/alias.html">Web 1.0 Alias</a></p>
-	<p><a href="/WDI_Exercise/contact.html">Contact</a></p>
+  	<p id="name">P. Chubinskiy</p>
+  	<p><a href="/WDI_Exercise/aboutme.html">About Me</a></p>
+    <p><a href="/WDI_Exercise/code.html">Code</a></p>
+    <p><a href="/WDI_Exercise/writing.html">Writing</a></p>
+  	<p><a href="/WDI_Exercise/artdesign.html">Visual Art & Design</a></p>
+  	<p><a href="/WDI_Exercise/contact.html">Contact</a></p>
 	</div>
 
 	<div class="col-xs-1 col-xs-offset-5 col-sm-1 col-sm-offset-5 col-md-1 col-md-offset-0 col-lg-1 col-lg-offset-0">
 	  <div id="profile_background"></div>
-	  <img id="profile" src="/WDI_Exercise/profile.jpg">
+	  <img id="profile" src="profile.jpg">
 	</div>
 
 	<div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
-		<p>phone: 832-528-8983</p>
 		<p>email: pchubinskiy@gmail.com</p>
 		<p>LinkedIn: <a href="https://www.linkedin.com/in/pchubinskiy">https://www.linkedin.com/in/pchubinskiy</a></p>
 		<p>Copyright Notice: All Images Copyright Paul Chubinskiy</p>
