--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
   <div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
     <p id="name">P. Chubinskiy</p>
-    <p><a href="aboutme.html">About Me</a></p>
-    <p><a href="artdesign.html">Visual Art & Design</a></p>
-    <p><a href="alias.html">Web 1.0 Alias</a></p>
-    <p><a href="contact.html">Contact</a></p>
+    <p><a href="/WDI_Exercise/aboutme.html">About Me</a></p>
+    <p><a href="/WDI_Exercise/code.html">Code</a></p>
+    <p><a href="/WDI_Exercise/writing.html">Writing</a></p>
+    <p><a href="/WDI_Exercise/artdesign.html">Visual Art & Design</a></p>
+    <p><a href="/WDI_Exercise/contact.html">Contact</a></p>
   </div>
 
   <div class="col-xs-1 col-xs-offset-5 col-sm-1 col-sm-offset-5 col-md-1 col-md-offset-0 col-lg-1 col-lg-offset-0">
