--- a/writing.html
+++ b/writing.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
 	<title></title>
-	<link href="/WDI_Exercise/wdiexercise.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" 
+	<link href="wdiexercise.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css"
 	href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
 </head>
 <body>
   <div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
     <p><a href="/WDI_Exercise/aboutme.html">About Me</a></p>
+    <p><a href="/WDI_Exercise/code.html">Code</a></p>
     <p><a href="/WDI_Exercise/writing.html">Writing</a></p>
     <p><a href="/WDI_Exercise/artdesign.html">Visual Art & Design</a></p>
-    <p><a href="/WDI_Exercise/alias.html">Web 1.0 Alias</a></p>
     <p><a href="/WDI_Exercise/contact.html">Contact</a></p>
   </div>
 </body>
