--- a/artdesign.html
+++ b/artdesign.html
@@ -9,11 +9,11 @@
 <body>
 	<div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
 		<p id="name">P. Chubinskiy</p>
-    <p><a href="/WDI_Exercise/aboutme.html">About Me</a></p>
-    <p><a href="/WDI_Exercise/code.html">Code</a></p>
-    <p><a href="/WDI_Exercise/writing.html">Writing</a></p>
-    <p><a href="/WDI_Exercise/artdesign.html">Visual Art & Design</a></p>
-    <p><a href="/WDI_Exercise/contact.html">Contact</a></p>
+    <p><a href="aboutme.html">About Me</a></p>
+    <p><a href="code.html">Code</a></p>
+    <p><a href="writing.html">Writing</a></p>
+    <p><a href="artdesign.html">Visual Art & Design</a></p>
+    <p><a href="contact.html">Contact</a></p>
   </div>
 
    <div id="content" class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
