--- a/writing.html
+++ b/writing.html
@@ -8,11 +8,12 @@
 </head>
 <body>
   <div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-    <p><a href="/WDI_Exercise/aboutme.html">About Me</a></p>
-    <p><a href="/WDI_Exercise/code.html">Code</a></p>
-    <p><a href="/WDI_Exercise/writing.html">Writing</a></p>
-    <p><a href="/WDI_Exercise/artdesign.html">Visual Art & Design</a></p>
-    <p><a href="/WDI_Exercise/contact.html">Contact</a></p>
+    <p id="name">P. Chubinskiy</p>
+    <p><a href="aboutme.html">About Me</a></p>
+    <p><a href="code.html">Code</a></p>
+    <p><a href="writing.html">Writing</a></p>
+    <p><a href="artdesign.html">Visual Art & Design</a></p>
+    <p><a href="contact.html">Contact</a></p>
   </div>
 </body>
 </html>
