--- a/writing.html
+++ b/writing.html
@@ -9,7 +9,7 @@
 <body>
   <div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
     <p id="name">P. Chubinskiy</p>
-    <p><a href="aboutme.html">About Me</a></p>
+    <p><a href="index.html">About Me</a></p>
     <p><a href="code.html">Code</a></p>
     <p><a href="writing.html">Writing</a></p>
     <p><a href="artdesign.html">Visual Art & Design</a></p>
