--- a/writing.html
+++ b/writing.html
@@ -15,5 +15,12 @@
     <p><a href="artdesign.html">Visual Art & Design</a></p>
     <p><a href="contact.html">Contact</a></p>
   </div>
+
+  <div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
+    <p><a href="http://www.lrngo.com/learn-english/The-Advantage-of-a-Bilingual-Brain">The Advantage of a Bilingual Brain</a></p>
+    <p>Copyright Notice: All Images Copyright Paul Chubinskiy</p>
+    <br>
+    <br>
+  </div>
 </body>
 </html>
