--- a/artdesign.html
+++ b/artdesign.html
@@ -18,7 +18,7 @@
 
    <div id="content" class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
 		<img src="noexitcover.jpg" style="width: 40%;">
-		<img src="collage.jpg" style="width: 40%;">
+		<!--<img src="collage.jpg" style="width: 40%;">-->
 		<img src="wccccatering.png" style="width: 40%;">
 		<img src="wccclogoletters.png" style="width: 40%;">
 	</div>
