--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,10 @@
     <p><a href="contact.html">Contact</a></p>
 	</div>
 
-	<div class="col-xs-1 col-xs-offset-5 col-sm-1 col-sm-offset-5 col-md-1 col-md-offset-0 col-lg-1 col-lg-offset-0">
+	<!--<div class="col-xs-1 col-xs-offset-5 col-sm-1 col-sm-offset-5 col-md-1 col-md-offset-0 col-lg-1 col-lg-offset-0">
 	  <div id="profile_background"></div>
 	  <img id="profile" src="profile.jpg">
-	</div>
+	</div>-->
 
 	<div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
 		<p>email: pchubinskiy@gmail.com</p>
