--- a/artdesign.html
+++ b/artdesign.html
@@ -21,6 +21,8 @@
 		<!--<img src="collage.jpg" style="width: 40%;">-->
 		<img src="wccccatering.png" style="width: 40%;">
 		<img src="wccclogoletters.png" style="width: 40%;">
+
+    <p class="copyright">Copyright Notice: All Images Copyright Paul Chubinskiy</p>
 	</div>
 </body>
 </html>
