--- a/code.html
+++ b/code.html
@@ -17,6 +17,7 @@
   </div>
 
   <div id="content" class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+    <img src="w09_wdiproj.png" style="width: 40%;">
     <p><a href="https://w09wdiproj.herokuapp.com/">Survey App I made for Week 09 of a Web Development course.</a></p>
     <p>Source code: <a href="https://github.com/pchubinskiy/pchubinskiy.github.io">pchubinskiy.github.io</a></p>
   </div>
