adding tic-tac-toe app link/pic to code page

--- a/code.html
+++ b/code.html
@@ -18,8 +18,14 @@
 
   <div id="content" class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
     <a href="https://w09wdiproj.herokuapp.com/"><img src="w09_wdiproj.png" style="width: 40%; border-radius: 10px; border-style: solid; border-width: thin; border-color: gray;"></a>
-    <p style="margin-top: 10px;"><a href="https://w09wdiproj.herokuapp.com/">Survey App I made for Week 09 of a Web Development course.</a></p>
+    <p style="margin-top: 10px;"><a href="https://w09wdiproj.herokuapp.com/">Real-time Node.js survey application I made for Week 09 of a Web Development course. Details & documentation in README.md.</a></p>
     <p>Source code: <a href="https://github.com/pchubinskiy/pchubinskiy.github.io">pchubinskiy.github.io</a></p>
+  </div>
+
+  <div id="content" class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+    <a href="tictactoe_nonrefactored/index.html"><img src="tictactoe_cmyk.png" style="width: 40%; border-radius: 10px; border-style: solid; border-width: thin; border-color: gray;"></a>
+    <p style="margin-top: 10px;"><a href="https://w09wdiproj.herokuapp.com/">Real-time Node.js survey application I made for Week 09 of a Web Development course. Details & documentation in README.md.</a></p>
+    <p>Source code: <a href="https://github.com/pchubinskiy/tictactoe_nonrefactored">tictactoe_nonrefactored</a></p>
   </div>
 </body>
 </html>
