--- a/code.html
+++ b/code.html
@@ -24,8 +24,13 @@
 
   <div id="content" class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
     <a href="tictactoe_nonrefactored/index.html"><img src="tictactoe_cmyk.png" style="width: 40%; border-radius: 10px; border-style: solid; border-width: thin; border-color: gray;"></a>
-    <p style="margin-top: 10px;"><a href="https://w09wdiproj.herokuapp.com/">Real-time Node.js survey application I made for Week 09 of a Web Development course. Details & documentation in README.md.</a></p>
+    <p style="margin-top: 10px;"><a href="https://w09wdiproj.herokuapp.com/">Tic Tac Toe application I made when learning about JavaScript and jQuery.</a></p>
     <p>Source code: <a href="https://github.com/pchubinskiy/tictactoe_nonrefactored">tictactoe_nonrefactored</a></p>
+  </div>
+
+  <div id="content" class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+    <a href="https://lrngo.com/coolstuff"><img src="lrngo_othercoolstuff.png" style="width: 40%; border-radius: 10px; border-style: solid; border-width: thin; border-color: gray;"></a>
+    <p style="margin-top: 10px;"><a href="https://lrngo.com/coolstuff">Landing page I designed as an intern.</a></p>
   </div>
 </body>
 </html>
