changed image href to http

--- a/code.html
+++ b/code.html
@@ -29,8 +29,8 @@
   </div>
 
   <div id="content" class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
-    <a href="https://lrngo.com/coolstuff"><img src="lrngo_landing_pages/othercoolstuff.png" style="width: 40%; border-radius: 10px; border-style: solid; border-width: thin; border-color: gray;"></a>
-    <p style="margin-top: 10px;"><a href="https://lrngo.com/coolstuff">Landing page I designed as an intern.</a></p>
+    <a href="http://www.lrngo.com/coolstuff"><img src="lrngo_landing_pages/othercoolstuff.png" style="width: 40%; border-radius: 10px; border-style: solid; border-width: thin; border-color: gray;"></a>
+    <p style="margin-top: 10px;"><a href="http://www.lrngo.com/coolstuff">Landing page I designed as an intern.</a></p>
   </div>
 </body>
 </html>
