trying to align content

--- a/code.html
+++ b/code.html
@@ -7,7 +7,7 @@
   href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
 </head>
 <body>
-  <div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+  <div id="menubar" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
     <p id="name">P. Chubinskiy</p>
     <p><a href="index.html">About Me</a></p>
     <p><a href="code.html">Code</a></p>
@@ -16,19 +16,19 @@
     <p><a href="contact.html">Contact</a></p>
   </div>
 
-  <div id="content" class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+  <div id="content" class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
     <a href="https://w09wdiproj.herokuapp.com/"><img src="w09_wdiproj.png" style="width: 40%; border-radius: 10px; border-style: solid; border-width: thin; border-color: gray;"></a>
     <p style="margin-top: 10px;"><a href="https://w09wdiproj.herokuapp.com/">Real-time Node.js survey application I made for Week 09 of a Web Development course. Details & documentation in README.md.</a></p>
     <p>Source code: <a href="https://github.com/pchubinskiy/pchubinskiy.github.io">pchubinskiy.github.io</a></p>
   </div>
 
-  <div id="content" class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+  <div id="content" class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
     <a href="tictactoe_nonrefactored/index.html"><img src="tictactoe_cmyk.png" style="width: 40%; border-radius: 10px; border-style: solid; border-width: thin; border-color: gray;"></a>
     <p style="margin-top: 10px;"><a href="https://w09wdiproj.herokuapp.com/">Tic Tac Toe application I made when learning about JavaScript and jQuery.</a></p>
     <p>Source code: <a href="https://github.com/pchubinskiy/tictactoe_nonrefactored">tictactoe_nonrefactored</a></p>
   </div>
 
-  <div id="content" class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+  <div id="content" class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
     <a href="http://www.lrngo.com/coolstuff"><img src="lrngo_landing_pages/othercoolstuff.png" style="width: 40%; border-radius: 10px; border-style: solid; border-width: thin; border-color: gray;"></a>
     <p style="margin-top: 10px;"><a href="http://www.lrngo.com/coolstuff">Landing page I designed as an intern.</a></p>
   </div>
