added 'coming soon...' shape

--- a/code.html
+++ b/code.html
@@ -16,6 +16,13 @@
     <p><a href="contact.html">Contact</a></p>
   </div>
 
+  <!-- add a mobile-responsive png-->
+  <div id="content" class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
+    <a href="#"><div style="width: 395px; height: 248px; color: white; background-color: gray; border-radius: 10px; border-style: solid; border-width: thin; border-color: gray;">In Progress...</div></a>
+    <p style="margin-top: 10px;"><a href=""></a></p>
+    <p>Source code: <a href="https://github.com/pchubinskiy/pchubinskiy.github.io">In progress...</a></p>
+  </div>
+
   <div id="content" class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
     <a href="https://w09wdiproj.herokuapp.com/"><img src="w09_wdiproj.png" style="width: 80%; border-radius: 10px; border-style: solid; border-width: thin; border-color: gray;"></a>
     <p style="margin-top: 10px;"><a href="https://w09wdiproj.herokuapp.com/">Real-time Node.js survey application I made for Week 09 of a Web Development course. Details & documentation in README.md.</a></p>
