styling inner text

--- a/code.html
+++ b/code.html
@@ -18,7 +18,7 @@
 
   <!-- add a mobile-responsive png-->
   <div id="content" class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
-    <a href="#"><div width="395px" height="248px" style="width: 80%; color: white; background-color: gray; border-radius: 10px; border-style: solid; border-width: thin; border-color: gray;">In Progress...</div></a>
+    <a href="#"><div width="395px" height="248px" style="width: 80%; text-align: center; margin: auto; color: white; background-color: gray; border-radius: 10px; border-style: solid; border-width: thin; border-color: gray;"><span style="margin-top: 15%;">In Progress...</span></div></a>
     <p style="margin-top: 10px;"><a href=""></a></p>
     <p>Source code: <a href="https://github.com/pchubinskiy/pchubinskiy.github.io">In progress...</a></p>
   </div>
