reorganized panel links; put code.html inline styling into css file

--- a/code.html
+++ b/code.html
@@ -3,6 +3,7 @@
 <head>
   <title></title>
   <link href="wdiexercise.css" rel="stylesheet">
+  <link href="css/code.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css"
   href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
 </head>
@@ -12,32 +13,45 @@
     <p><a href="index.html">About Me</a></p>
     <p><a href="code.html">Code</a></p>
     <p><a href="writing.html">Writing</a></p>
-    <p><a href="artdesign.html">Visual Art & Design</a></p>
+    <p><a href="artdesign.html">Art & Design</a></p>
     <p><a href="contact.html">Contact</a></p>
   </div>
 
   <!-- add a mobile-responsive png-->
   <div id="content" class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
-    <a href="#"><div width="395px" height="248px" style="width: 80%; text-align: center; color: white; background-color: gray; border-radius: 10px; border-style: solid; border-width: thin; border-color: gray;"><span style="margin-top: 15%;">In Progress...</span></div></a>
-    <p style="margin-top: 10px;"><a href=""></a></p>
-    <p>Source code: <a href="https://github.com/pchubinskiy/pchubinskiy.github.io">In progress...</a></p>
+    <a href="#">
+      <div class="coming_soon">
+        <span style="margin-top: 15%;">In Progress...</span>
+      </div>
+    </a>
+    <p class="annotation"><a href=""></a></p>
+    <p>Source code: <a href="#">In Progress: Final Project for Week 12/12 of WDI</a></p>
   </div>
 
   <div id="content" class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
-    <a href="https://w09wdiproj.herokuapp.com/"><img src="w09_wdiproj.png" style="width: 80%; border-radius: 10px; border-style: solid; border-width: thin; border-color: gray;"></a>
-    <p style="margin-top: 10px;"><a href="https://w09wdiproj.herokuapp.com/">Real-time Node.js survey application I made for Week 09 of a Web Development course. Details & documentation in README.md.</a></p>
-    <p>Source code: <a href="https://github.com/pchubinskiy/pchubinskiy.github.io">pchubinskiy.github.io</a></p>
+    <a href="https://w09wdiproj.herokuapp.com/">
+      <img class="example" src="w09_wdiproj.png">
+    </a>
+    <p class="annotation">
+      <a href="https://w09wdiproj.herokuapp.com/">Real-time Node.js survey application I made for Week 09 of a Web Development course. Details & documentation in README.md.</a>
+    </p>
+    <p>Source code: <a href="https://github.com/pchubinskiy/pchubinskiy.github.io">pchubinskiy.github.io</a>
+    </p>
   </div>
 
   <div id="content" class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
-    <a href="tictactoe_nonrefactored/index.html"><img src="tictactoe_cmyk.png" style="width: 80%; border-radius: 10px; border-style: solid; border-width: thin; border-color: gray;"></a>
-    <p style="margin-top: 10px;"><a href="https://w09wdiproj.herokuapp.com/">Tic Tac Toe application I made when learning about JavaScript and jQuery.</a></p>
+    <a href="tictactoe_nonrefactored/index.html">
+      <img class="example" src="tictactoe_cmyk.png">
+    </a>
+    <p class="annotation"><a href="https://w09wdiproj.herokuapp.com/">Tic Tac Toe application I made when learning about JavaScript and jQuery.</a></p>
     <p>Source code: <a href="https://github.com/pchubinskiy/tictactoe_nonrefactored">tictactoe_nonrefactored</a></p>
   </div>
 
   <div id="content" class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
-    <a href="http://www.lrngo.com/coolstuff"><img src="lrngo_landing_pages/othercoolstuff.png" style="width: 80%; border-radius: 10px; border-style: solid; border-width: thin; border-color: gray;"></a>
-    <p style="margin-top: 10px;"><a href="http://www.lrngo.com/coolstuff">Landing page I designed as an intern.</a></p>
+    <a href="http://www.lrngo.com/coolstuff">
+      <img class="example" src="lrngo_landing_pages/othercoolstuff.png">
+    </a>
+    <p class="annotation"><a href="http://www.lrngo.com/coolstuff">Landing page I designed as an intern.</a></p>
   </div>
 </body>
 </html>
