--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,7 @@
     <p><a href="index.html">About Me</a></p>
     <p><a href="code.html">Code</a></p>
     <p><a href="writing.html">Writing</a></p>
-    <p><a href="artdesign.html">Visual Art & Design</a></p>
-    <p><a href="contact.html">Contact</a></p>
+    <p><a href="artdesign.html">Art & Design</a></p>
 	</div>
 
 	<!--<div class="col-xs-1 col-xs-offset-5 col-sm-1 col-sm-offset-5 col-md-1 col-md-offset-0 col-lg-1 col-lg-offset-0">
