--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p id="name">P. Chubinskiy</p>
     <p><a href="code.html">Code</a></p>
     <p><a href="writing.html">Writing</a></p>
-    <p><a href="artdesign.html">Visual Art & Design</a></p>
+    <p><a href="artdesign.html">Art & Design</a></p>
     <p><a href="contact.html">Contact</a></p>
   </div>
 
