changed coming-soon coloring

--- a/code.html
+++ b/code.html
@@ -25,7 +25,7 @@
       </div>
     </a>
     <p class="annotation"><a href=""></a></p>
-    <p>Source code: <a href="#">In Progress: Final Project for Week 12/12 of WDI</a></p>
+    <p>Source code: <a href="#">Final Project for Week 12/12 of WDI</a></p>
 
     <a href="tictactoe_nonrefactored/index.html">
       <img class="example" src="tictactoe_cmyk.png">
