--- a/artdesign.html
+++ b/artdesign.html
@@ -16,8 +16,8 @@
   </div>
 
    <div id="content" class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
-    * change the font here *
 		<img src="noexitcover.jpg" style="width: 40%;">
+    <span style="display: block;">* change the font here *</span>
 		<!--<img src="collage.jpg" style="width: 40%;">-->
 		<img src="wccccatering.png" style="width: 40%;">
 		<img src="wccclogoletters.png" style="width: 40%;">
