changed tic tac toe link to pancakeapps url

--- a/code.html
+++ b/code.html
@@ -30,7 +30,7 @@
     <a href="tictactoe_nonrefactored/index.html">
       <img class="example" src="tictactoe_cmyk.png">
     </a>
-    <p class="annotation"><a href="https://w09wdiproj.herokuapp.com/">Tic Tac Toe application I made when learning about JavaScript and jQuery.</a></p>
+    <p class="annotation"><a href="https://http://tttcmyk.pancakeapps.com/">Tic Tac Toe application I made when learning about JavaScript and jQuery.</a></p>
     <p>Source code: <a href="https://github.com/pchubinskiy/tictactoe_nonrefactored">tictactoe_nonrefactored</a></p>
   </div>
 
