changed tic tac toe image link to pancakeapps url

--- a/code.html
+++ b/code.html
@@ -27,10 +27,10 @@
     <p class="annotation"><a href=""></a></p>
     <p>Source code: <a href="#">Final Project for Week 12/12 of WDI</a></p>
 
-    <a href="tictactoe_nonrefactored/index.html">
+    <a href="https://tttcmyk.pancakeapps.com/">
       <img class="example" src="tictactoe_cmyk.png">
     </a>
-    <p class="annotation"><a href="https://http://tttcmyk.pancakeapps.com/">Tic Tac Toe application I made when learning about JavaScript and jQuery.</a></p>
+    <p class="annotation"><a href="https://tttcmyk.pancakeapps.com/">Tic Tac Toe application I made when learning about JavaScript and jQuery.</a></p>
     <p>Source code: <a href="https://github.com/pchubinskiy/tictactoe_nonrefactored">tictactoe_nonrefactored</a></p>
   </div>
 
