added row class for content

--- a/code.html
+++ b/code.html
@@ -18,7 +18,7 @@
   </div>
 
   <!-- add a mobile-responsive png-->
-  <div id="content" class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
+  <div id="content" class="row col-lg-5 col-md-5 col-sm-5 col-xs-12">
     <a href="#">
       <div class="coming_soon">
         <span style="margin-top: 15%;">In Progress...</span>
@@ -34,7 +34,7 @@
     <p>Source code: <a href="https://github.com/pchubinskiy/tictactoe_nonrefactored">tictactoe_nonrefactored</a></p>
   </div>
 
-  <div id="content" class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
+  <div id="content" class="row col-lg-5 col-md-5 col-sm-5 col-xs-12">
     <a href="https://w09wdiproj.herokuapp.com/">
       <img class="example" src="w09_wdiproj.png">
     </a>
