--- a/code.html
+++ b/code.html
@@ -13,10 +13,10 @@
 <body>
   <div id="menubar" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
     <p id="name">P. Chubinskiy</p>
-    <p><a href="/">About Me</a></p>
-    <p><a href="/node_version/writing">Writing</a></p>
-    <p><a href="/node_version/artdesign">Art & Design</a></p>
-    <p><a href="/node_version/contact">Contact</a></p>
+    <p><a href="index.html">About Me</a></p>
+    <p><a href="writing.html">Writing</a></p>
+    <p><a href="artdesign.html">Art & Design</a></p>
+    <p><a href="contact.html">Contact</a></p>
   </div>
 
   <!-- add a mobile-responsive png-->
