update all root pages and links

--- a/index.html
+++ b/index.html
@@ -2,31 +2,34 @@
 <html lang="en">
 <head>
   <title></title>
-  <link href="wdiexercise.css" rel="stylesheet">
+  <link href="/stylesheets/wdiexercise.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
 </head>
 <body>
 
   <div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-    <p id="name">P. Chubinskiy</p>
+    <p id="name">Paul Chubinskiy</p>
     <p><a href="code.html">Code</a></p>
     <p><a href="writing.html">Writing</a></p>
     <p><a href="artdesign.html">Art & Design</a></p>
     <p><a href="contact.html">Contact</a></p>
   </div>
 
-  <div class="col-xs-1 col-xs-offset-5 col-sm-1 col-sm-offset-5 col-md-1 col-md-offset-0 col-lg-1 col-lg-offset-0">
+  <div class="col-lg-offset-3 col-md-offset-3 col-sm-offset-5 col-xs-offset-5 col-lg-1 col-md-1 col-sm-1 col-xs-1">
       <div id="profile_background"></div>
-      <img id="profile" src="profile.jpg">
+      <img id="profile" src="/images/profile.jpg">
   </div>
 
   <div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>I majored in Literature and Visual Arts at Duke University, where I did graduate-level research and completed challenging art and design projects. After graduating from college, I tutored reading and writing for college entrance exams, began applying for technical writing and copy editing work, and took a web development internship with a local startup.</p>
+    <p>I got interested in web development because it rewarded patience and attention to detail and because I was excited about the potential of open source, data visualization, and using code to build educational tools. Working on real projects convinced me that I wanted to pursue a career involving web development and that I could also use my writing and visual arts skills in this line of work. I’m currently a Web Development Immersive student at General Assembly in Austin, TX, where I’m learning full-stack development.</p>
+    <p>My hobbies include watching basketball and soccer, reading and writing, exercising, and doing yoga. I also like to change what I put here.</p>
+    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
     <p>Translation Ipsum: </p>
 
     <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</p>
-<!--       <p id="aboutme_text">Hi, I'm Paul. I graduated from Duke University in 2014 with a degree in Literature and Visual Arts. While interning, I was fortunate enough to find development work, even though I started out as a writer. Since then, I've been looking to work in tech. I'm fascinated by programming in general and by the potential of API consumption, D3 Javascript, and interactivity in particular.
+ --><!--       <p id="aboutme_text">Hi, I'm Paul. I graduated from Duke University in 2014 with a degree in Literature and Visual Arts. While interning, I was fortunate enough to find development work, even though I started out as a writer. Since then, I've been looking to work in tech. I'm fascinated by programming in general and by the potential of API consumption, D3 Javascript, and interactivity in particular.
       <br>
       <br>
       I follow basketball and soccer, and am looking forward to seeing how Anthony Davis and Neymar play this year. Moreover, I'm curious to see if Neymar's future stats will look <a id="a_underlined" href="http://fivethirtyeight.com/features/lionel-messi-is-impossible/">anything like Messi's</a> and would like to model as much on my own.
