--- a/artdesign.html
+++ b/artdesign.html
@@ -1,28 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title></title>
-	<link href="wdiexercise.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css"
-	href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
+  <title></title>
+  <link href="/stylesheets/wdiexercise.css" rel="stylesheet">
+  <link href="/stylesheets/artdesign.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css"
+  href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
 </head>
 <body>
-	<div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-		<p id="name">P. Chubinskiy</p>
+  <div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+    <p id="name">P. Chubinskiy</p>
     <p><a href="index.html">About Me</a></p>
     <p><a href="code.html">Code</a></p>
     <p><a href="writing.html">Writing</a></p>
     <p><a href="contact.html">Contact</a></p>
   </div>
 
-   <div id="content" class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
-		<img src="noexitcover.jpg" style="width: 40%;">
-    <span style="display: block;">* change the font here *</span>
-		<!--<img src="collage.jpg" style="width: 40%;">-->
-		<img src="wccccatering.png" style="width: 40%;">
-		<img src="wccclogoletters.png" style="width: 40%;">
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6">
+        <a href="/images/artdesign_fullsize/noexitcover.jpg">
+          <img src="/images/noexitcover_min.jpg" style="">
+        </a>
+      </div>
 
+      <div class="col-lg-6">
+        <p class="annotation"><a href=""></a></p>
+        <p class="">#: <a href="#">#</a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6">
+        <a href="/images/artdesign_fullsize/wccccatering.png">
+          <img src="/images/wccccatering_min.png" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6">
+        <p class="annotation"><a href=""></a></p>
+        <p class="">#: <a href="#">#</a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6">
+        <a href="/images/artdesign_fullsize/wccclogoletters.png">
+          <img src="/images/wccclogoletters_min.png" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6">
+        <p class="annotation"><a href=""></a></p>
+        <p class="">#: <a href="#">#</a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6">
+        <a href="/images/artdesign_fullsize/collage.jpg">
+          <img src="/images/collage_min.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6">
+        <p class="annotation"><a href=""></a></p>
+        <p class="">#: <a href="#">#</a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6">
+        <a href="#">
+           <iframe id="film" src="https://player.vimeo.com/video/126012689" class="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          <p><a href="https://vimeo.com/126012689">engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+        </a>
+      </div>
+
+      <div class="col-lg-6">
+        <p class="annotation"><a href=""></a></p>
+        <p class="">#: <a href="#">#</a></p>
+      </div>
+    </div>
+
+<!--     <img src="/images/noexitcover.jpg" style="" class="col-lg-12 col-md-12 col-md-12 col-sm-12 col-xs-12">
+    <span style="display: block;">* change the font here *</span>
+    <img src="collage.jpg" style="width: 40%;">
+    <img src="/images/wccccatering.png" style="" class="col-lg-6 col-md-6 col-md-6 col-sm-6 col-xs-6">
+    <img src="/images/wccclogoletters.png" style="" class="col-lg-6 col-md-6 col-md-6 col-sm-6 col-xs-6">
+
+     <iframe id="film" src="https://player.vimeo.com/video/126012689" class="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <p><a href="https://vimeo.com/126012689">engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+ -->
     <p class="copyright">Copyright Notice: All Images Copyright Paul Chubinskiy</p>
-	</div>
 </body>
 </html>
