--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,9 @@
 	</div>-->
 
 	<div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
-		<p>email: pchubinskiy@gmail.com</p>
-		<p>LinkedIn: <a href="https://www.linkedin.com/in/pchubinskiy">https://www.linkedin.com/in/pchubinskiy</a></p>
-		<p>Github: <a href="https://github.com/pchubinskiy">pchubinskiy</a></p>
+    <p>email: <a href="mailto:pchubinskiy@gmail.com">pchubinskiy@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/pchubinskiy">https://www.linkedin.com/in/pchubinskiy</a></p>
+    <p>Github: <a href="https://github.com/pchubinskiy">pchubinskiy</a></p>
     <p>Copyright Notice: All Images Copyright Paul Chubinskiy</p>
 		<br>
 		<br>
