--- a/writing.html
+++ b/writing.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title></title>
-	<link href="wdiexercise.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css"
-	href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
+  <title></title>
+  <link href="/stylesheets/wdiexercise.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css"
+  href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
 </head>
 <body>
-  <div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+  <div id="menubar" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
     <p id="name">P. Chubinskiy</p>
     <p><a href="index.html">About Me</a></p>
     <p><a href="code.html">Code</a></p>
@@ -15,8 +15,20 @@
     <p><a href="contact.html">Contact</a></p>
   </div>
 
-  <div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
+  <div id="content" class="col-lg-offset-4 col-md-offset-4 col-lg-6 col-md-6 col-sm-11 col-xs-11">
     <p><a href="http://www.lrngo.com/learn-english/The-Advantage-of-a-Bilingual-Brain">The Advantage of a Bilingual Brain</a></p>
+    <p><a href="/pdfs/art_and_existentialism.pdf">Art and Existentialism PDF</a> (unpublished essay)</p>
+    <p>
+    Synopsis:
+    <br>
+    I wrote an aesthetic component for existential theory that understood consumption of art as a respite for bad faith, and production of art as a respite for nausea.
+    In this essay, art is taken to mean a cultural object such as a performance, painting, or novel.
+    More generally, my intent was to:
+    provide a understanding of art that could be used in identifying Western and non-Western forms of art;
+    account for how genres are created and recognized;
+    write a theory that integrated notions of repression (bad faith as lying-to-yourself) so that it would be compatible with writing in sociology, economics, political science, etc, that draws on notions of ideology;
+    understand art as serving a practical purpose--respite--so that the theory is conducive to quantitative analysis.
+    </p>
     <p>Copyright Notice: All Images Copyright Paul Chubinskiy</p>
     <br>
     <br>
