--- a/contact.html
+++ b/contact.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title></title>
-	<link href="wdiexercise.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css"
-	href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
+  <title></title>
+  <link href="/stylesheets/wdiexercise.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css"
+  href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
 </head>
 <body>
-	<div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+  <div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
     <p id="name">P. Chubinskiy</p>
     <p><a href="index.html">About Me</a></p>
     <p><a href="code.html">Code</a></p>
     <p><a href="writing.html">Writing</a></p>
     <p><a href="artdesign.html">Art & Design</a></p>
-	</div>
+  </div>
 
-	<!--<div class="col-xs-1 col-xs-offset-5 col-sm-1 col-sm-offset-5 col-md-1 col-md-offset-0 col-lg-1 col-lg-offset-0">
-	  <div id="profile_background"></div>
-	  <img id="profile" src="profile.jpg">
-	</div>-->
+  <!--<div class="col-xs-1 col-xs-offset-5 col-sm-1 col-sm-offset-5 col-md-1 col-md-offset-0 col-lg-1 col-lg-offset-0">
+    <div id="profile_background"></div>
+    <img id="profile" src="profile.jpg">
+  </div>-->
 
-	<div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
+  <div id="content" class="col-lg-offset-4 col-md-offset-4 col-lg-6 col-md-6 col-sm-11 col-xs-11">
     <p>email: <a href="mailto:pchubinskiy@gmail.com">pchubinskiy@gmail.com</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/pchubinskiy">https://www.linkedin.com/in/pchubinskiy</a></p>
     <p>Github: <a href="https://github.com/pchubinskiy">pchubinskiy</a></p>
     <p>Copyright Notice: All Images Copyright Paul Chubinskiy</p>
-		<br>
-		<br>
-	</div>
+    <br>
+    <br>
+  </div>
 </body>
 </html>
