--- a/artdesign.html
+++ b/artdesign.html
@@ -70,6 +70,58 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6">
+        <a href="/images/artdesign_fullsize/.jpg">
+          <img src="/images/bw_figure.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6">
+        <p class="annotation"><a href=""></a></p>
+        <p class="">#: <a href="#">#</a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6">
+        <a href="/images/artdesign_fullsize/.jpg">
+          <img src="/images/bw_figure2.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6">
+        <p class="annotation"><a href=""></a></p>
+        <p class="">#: <a href="#">#</a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6">
+        <a href="/images/artdesign_fullsize/.jpg">
+          <img src="/images/landscape_fiction.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6">
+        <p class="annotation"><a href=""></a></p>
+        <p class="">#: <a href="#">#</a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6">
+        <a href="/images/artdesign_fullsize/.jpg">
+          <img src="/images/figure3.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6">
+        <p class="annotation"><a href=""></a></p>
+        <p class="">#: <a href="#">#</a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6">
         <a href="#">
            <iframe id="film" src="https://player.vimeo.com/video/126012689" class="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           <p><a href="https://vimeo.com/126012689">engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
