--- a/artdesign.html
+++ b/artdesign.html
@@ -71,7 +71,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6">
         <a href="/images/artdesign_fullsize/.jpg">
-          <img src="/images/bw_figure.jpg" style="">
+          <img src="/images/bw_figure_min.jpg" style="">
         </a>
       </div>
 
@@ -84,7 +84,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6">
         <a href="/images/artdesign_fullsize/.jpg">
-          <img src="/images/bw_figure2.jpg" style="">
+          <img src="/images/bw_figure2_min.jpg" style="">
         </a>
       </div>
 
@@ -97,7 +97,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6">
         <a href="/images/artdesign_fullsize/.jpg">
-          <img src="/images/landscape_fiction.jpg" style="">
+          <img src="/images/landscape_fiction_min.jpg" style="">
         </a>
       </div>
 
@@ -110,7 +110,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6">
         <a href="/images/artdesign_fullsize/.jpg">
-          <img src="/images/figure3.jpg" style="">
+          <img src="/images/figure3_min.jpg" style="">
         </a>
       </div>
 
