--- a/artdesign.html
+++ b/artdesign.html
@@ -94,7 +94,7 @@
       </div>
     </div>
 
-    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+    <!-- <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6">
         <a href="/images/artdesign_fullsize/.jpg">
           <img src="/images/landscape_fiction_min.jpg" style="">
@@ -118,7 +118,7 @@
         <p class="annotation"><a href=""></a></p>
         <p class="">#: <a href="#">#</a></p>
       </div>
-    </div>
+    </div> -->
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6">
