took hashtag link placeholders out

--- a/artdesign.html
+++ b/artdesign.html
@@ -25,7 +25,7 @@
 
       <div class="col-lg-6">
         <p class="annotation"><a href=""></a></p>
-        <p class="">A collage of magazine snippets designed as a book or album cover; edited in Photoshop.<a href="#">#</a></p>
+        <p class="">A collage of magazine snippets designed as a book or album cover; edited in Photoshop.<a href=""></a></p>
       </div>
     </div>
 
@@ -38,7 +38,7 @@
 
       <div class="col-lg-6">
         <p class="annotation"><a href=""></a></p>
-        <p class="">An iteration of a logo I created for World Class Coffee Catering.<a href="#">#</a></p>
+        <p class="">An iteration of a logo I created for World Class Coffee Catering.<a href=""></a></p>
       </div>
     </div>
 
@@ -51,7 +51,7 @@
 
       <div class="col-lg-6">
         <p class="annotation"><a href=""></a></p>
-        <p class="">An iteration of a logo I created for World Class Coffee Catering.<a href="#">#</a></p>
+        <p class="">An iteration of a logo I created for World Class Coffee Catering.<a href=""></a></p>
       </div>
     </div>
 
@@ -64,7 +64,7 @@
 
       <div class="col-lg-6">
         <p class="annotation"><a href=""></a></p>
-        <p class="">A collage I made for an experimental drawing class assignment.<a href="#">#</a></p>
+        <p class="">A collage I made for an experimental drawing class assignment.<a href=""></a></p>
       </div>
     </div>
 
@@ -77,7 +77,7 @@
 
       <div class="col-lg-6">
         <p class="annotation"><a href=""></a></p>
-        <p class="">A figure drawing I did for a class assignment.<a href="#">#</a></p>
+        <p class="">A figure drawing I did for a class assignment.<a href=""></a></p>
       </div>
     </div>
 
@@ -90,7 +90,7 @@
 
       <div class="col-lg-6">
         <p class="annotation"><a href=""></a></p>
-        <p class="">A figure drawing I did for a class assignment.<a href="#">#</a></p>
+        <p class="">A figure drawing I did for a class assignment.<a href=""></a></p>
       </div>
     </div>
 
@@ -130,7 +130,7 @@
 
       <div class="col-lg-6">
         <p class="annotation"><a href=""></a></p>
-        <p class="">A film themed around gender that I shot and edited.<a href="#"></a></p>
+        <p class="">A film themed around gender that I shot and edited.git st<a href=""></a></p>
       </div>
     </div>
 
