--- a/code.html
+++ b/code.html
@@ -14,7 +14,7 @@
   <div id="menubar" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
     <p id="name">P. Chubinskiy</p>
     <p><a href="index.html">About Me</a></p>
-    <p><a href="writing.html">Writing</a></p>
+    <!--<p><a href="writing.html">Writing</a></p>-->
     <p><a href="artdesign.html">Art & Design</a></p>
     <p><a href="contact.html">Contact</a></p>
   </div>
