added new pantry app image and source code link; uploaded another film version

--- a/writing.html
+++ b/writing.html
@@ -29,6 +29,8 @@
     write a theory that integrated notions of repression (bad faith as lying-to-yourself) so that it would be compatible with writing in sociology, economics, political science, etc, that draws on notions of ideology;
     understand art as serving a practical purpose--respite--so that the theory is conducive to quantitative analysis.
     </p>
+    <p><a href="/pdfs/sharing_via_google_drive.pdf">Sharing Via Google Drive PDF</a></p>
+    <p>The PDF above is a technical write sample.</p>
     <p>Copyright Notice: All Images Copyright Paul Chubinskiy</p>
     <br>
     <br>
