--- a/artdesign.html
+++ b/artdesign.html
@@ -123,14 +123,14 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6">
         <a href="#">
-           <iframe id="film" src="https://player.vimeo.com/video/126012689" class="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          <p><a href="https://vimeo.com/126012689">engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+           <iframe src="https://player.vimeo.com/video/158437381" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+           <p><a href="https://vimeo.com/158437381">Engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         </a>
       </div>
 
       <div class="col-lg-6">
         <p class="annotation"><a href=""></a></p>
-        <p class="">A film themed around gender that I shot and edited.git st<a href=""></a></p>
+        <p class="">A film themed around gender that I shot and edited.<a href=""></a></p>
       </div>
     </div>
 
