--- a/code.html
+++ b/code.html
@@ -56,10 +56,7 @@
   <div id="content" class="row col-lg-offset-3 col-lg-9">
     <div class="col-lg-6">
       <a href="">
-        <img class="in-progress" src="/images/pantry.io.png">
-        <!-- <div class="coming_soon">
-          <p class="in-progress-text">In Progress...</p>
-        </div> -->
+        <img class="in-progress" src="/images/pantry.io_min.png">
       </a>
     </div>
 
