changed video width; added full github address to pantry code link

--- a/code.html
+++ b/code.html
@@ -62,7 +62,7 @@
 
     <div class="col-lg-6">
       <p class="annotation"><a href=""></a></p>
-      <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/">Final Project for Week --/12 of WDI</a></p>
+      <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/pantry">Final Project for Week --/12 of WDI</a></p>
     </div>
   </div>
 
