uploaded new images with font changes to artdesign page

--- a/artdesign.html
+++ b/artdesign.html
@@ -30,6 +30,25 @@
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-3">
+        <a href="/images/artdesign_fullsize/noexitcover2.jpg">
+          <img src="/images/noexitcover2_min.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-3">
+        <a href="/images/artdesign_fullsize/oncuecover2.jpg">
+          <img src="/images/oncuecover2_min.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6">
+        <p class="annotation"><a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6">
         <a href="/images/artdesign_fullsize/wccccatering.png">
           <img src="/images/wccccatering_min.png" style="">
