--- a/artdesign.html
+++ b/artdesign.html
@@ -30,13 +30,10 @@
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="">
+      <div class="col-lg-6">
         <a href="/images/artdesign_fullsize/noexitcover2.jpg">
           <img src="/images/noexitcover2_mini.jpg" style="">
         </a>
-      </div>
-
-      <div class="">
         <a href="/images/artdesign_fullsize/oncuecover2.jpg">
           <img src="/images/oncuecover2_mini.jpg" style="">
         </a>
