took out first image variations; cleaned up and filled out code page descriptions;fixing artdesign copyright notice

--- a/code.html
+++ b/code.html
@@ -32,7 +32,7 @@
 
     <div class="col-lg-6">
       <p class="annotation"><a href="http://lastichecked.herokuapp.com/"></a></p>
-      <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/wdi3_final_project">Final Project for Week 12/12 of WDI</a></p>
+      <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/wdi3_final_project">Final Project for week 12/12 of a web development course.</a></p>
     </div>
   </div>
 
@@ -45,7 +45,7 @@
 
     <div class="col-lg-6">
       <p class="annotation">
-        <a href="https://w09wdiproj.herokuapp.com/">Real-time Node.js survey application I made for Week 09 of a web development course.</a>
+        <a href="https://w09wdiproj.herokuapp.com/">Real-time, full-stack Node.js survey application I made for week 09/12 of a web development course.</a>
       </p>
       <p>Source code & documentation:
         <a href="https://github.com/pchubinskiy/w09_wdiproj">w09_wdiproj</a>
@@ -62,7 +62,7 @@
 
     <div class="col-lg-6">
       <p class="annotation"><a href=""></a></p>
-      <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/pantry">Final Project for Week --/12 of WDI</a></p>
+      <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/pantry">Full-stack Rails app for week 06/12 of WDI</a></p>
     </div>
   </div>
 
