--- a/artdesign.html
+++ b/artdesign.html
@@ -29,7 +29,7 @@
       </div>
     </div>
 
-    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+    <!-- <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6">
         <a href="/images/artdesign_fullsize/noexitcover.jpg">
           <img src="/images/noexitcover_mini.jpg" style="">
@@ -43,7 +43,7 @@
         <p class="annotation"><a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
-    </div>
+    </div> -->
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6">
@@ -159,6 +159,6 @@
      <iframe id="film" src="https://player.vimeo.com/video/126012689" class="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     <p><a href="https://vimeo.com/126012689">engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
  -->
-    <p class="copyright">Copyright Notice: All Images Copyright Paul Chubinskiy</p>
+    <p class="row copyright">Copyright Notice: All Images Copyright Paul Chubinskiy</p>
 </body>
 </html>
