--- a/artdesign.html
+++ b/artdesign.html
@@ -138,14 +138,11 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6">
-        <a href="#">
            <iframe src="https://player.vimeo.com/video/158437381" width="300" height="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-           <p><a href="https://vimeo.com/158437381">Engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-        </a>
       </div>
 
       <div class="col-lg-6">
-        <p class="annotation"><a href=""></a></p>
+        <p class="annotation"><a href="https://vimeo.com/158437381">Engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         <p class="">A film themed around gender that I shot and edited.<a href=""></a></p>
       </div>
     </div>
