--- a/artdesign.html
+++ b/artdesign.html
@@ -156,6 +156,8 @@
      <iframe id="film" src="https://player.vimeo.com/video/126012689" class="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     <p><a href="https://vimeo.com/126012689">engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
  -->
-    <p class="row copyright">Copyright Notice: All Images Copyright Paul Chubinskiy</p>
+      <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+        <p class="col-lg-9 copyright">Copyright Notice: All Images Copyright Paul Chubinskiy</p>
+      </div>
 </body>
 </html>
