--- a/artdesign.html
+++ b/artdesign.html
@@ -14,6 +14,7 @@
     <p><a href="code.html">Code</a></p>
     <!--<p><a href="writing.html">Writing</a></p>-->
     <p><a href="contact.html">Contact</a></p>
+    <p>Copyright Notice: All Images Copyright Paul Chubinskiy</p>
   </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
