changed index intro and copyright text across site

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <p>email: <a href="mailto:pchubinskiy@gmail.com">pchubinskiy@gmail.com</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/pchubinskiy">https://www.linkedin.com/in/pchubinskiy</a></p>
     <p>Github: <a href="https://github.com/pchubinskiy">pchubinskiy</a></p>
-    <p>Copyright Notice: All Images Copyright Paul Chubinskiy</p>
+    <p>Copyright notice: All art and design copyright Paul Chubinskiy</p>
     <br>
     <br>
   </div>
