--- a/artdesign.html
+++ b/artdesign.html
@@ -14,7 +14,6 @@
     <p><a href="code.html">Code</a></p>
     <!--<p><a href="writing.html">Writing</a></p>-->
     <p><a href="contact.html">Contact</a></p>
-    <p>Copyright Notice: All Images Copyright Paul Chubinskiy</p>
   </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
@@ -158,7 +157,7 @@
     <p><a href="https://vimeo.com/126012689">engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
  -->
       <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-        <p class="col-lg-9 copyright">Copyright Notice: All Images Copyright Paul Chubinskiy</p>
+        <p class="col-lg-9 copyright">Copyright notice: All art and design copyright Paul Chubinskiy.</p>
       </div>
 </body>
 </html>
