added link to pantry app

--- a/code.html
+++ b/code.html
@@ -31,8 +31,8 @@
     </div>
 
     <div class="col-lg-6">
-      <p class="annotation"><a href="http://lastichecked.herokuapp.com/"></a></p>
-      <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/wdi3_final_project">Final Project for week 12/12 of a web development course.</a></p>
+      <p class="annotation"><a href="http://lastichecked.herokuapp.com/">Final Project</a> using the Last.fm API and D3.js for week 12/12 of a web development course.</p>
+      <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/wdi3_final_project">wdi3_final_project</a></p>
     </div>
   </div>
 
@@ -55,7 +55,7 @@
 
   <div id="content" class="row col-lg-offset-3 col-lg-9">
     <div class="col-lg-6">
-      <a href="">
+      <a href="http://pantrydotio.herokuapp.com/">
         <img class="in-progress" src="/images/pantry.io_min.png">
       </a>
     </div>
@@ -88,7 +88,7 @@
 
     <div class="col-lg-6">
       <p class="annotation">
-        <a href="http://www.lrngo.com/coolstuff">Landing pages I designed as an intern.</a>
+        <a href="http://www.lrngo.com/coolstuff">Landing pages I designed.</a>
       </p>
     </div>
   </div>
