giving all desc same format

--- a/code.html
+++ b/code.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="col-lg-6">
-      <p class="annotation"><a href="http://lastichecked.herokuapp.com/">Final Project</a> using the Last.fm API and D3.js for week 12/12 of a web development course.</p>
+      <p class="annotation"><a href="http://lastichecked.herokuapp.com/">Final Project</a> using the Last.fm's API and D3.js for week 12/12 of a web development course.</p>
       <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/wdi3_final_project">wdi3_final_project</a></p>
     </div>
   </div>
@@ -44,9 +44,7 @@
     </div>
 
     <div class="col-lg-6">
-      <p class="annotation">
-        <a href="https://w09wdiproj.herokuapp.com/">Real-time, full-stack Node.js survey application I made for week 09/12 of a web development course.</a>
-      </p>
+      <p class="annotation">Real-time, full-stack <a href="https://w09wdiproj.herokuapp.com/">Node.js survey application</a> I made for week 09/12 of a web development course.</p>
       <p>Source code & documentation:
         <a href="https://github.com/pchubinskiy/w09_wdiproj">w09_wdiproj</a>
       </p>
@@ -61,8 +59,8 @@
     </div>
 
     <div class="col-lg-6">
-      <p class="annotation"><a href=""></a></p>
-      <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/pantry">Full-stack Rails app for week 06/12 of WDI</a></p>
+      <p class="annotation">Full-stack <a href="http://pantrydotio.herokuapp.com/">Rails app</a> for week 06/12 of WDI.</p>
+      <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/pantry">pantry</a></p>
     </div>
   </div>
 
@@ -74,7 +72,7 @@
     </div>
 
     <div class="col-lg-6">
-      <p class="annotation"><a href="https://tttcmyk.pancakeapps.com/">Tic Tac Toe application I made when learning about JavaScript and jQuery.</a></p>
+      <p class="annotation"><a href="https://tttcmyk.pancakeapps.com/">Tic Tac Toe app</a> I made when learning about JavaScript and jQuery.</p>
       <p>Source code & documentation: <a href="https://github.com/pchubinskiy/tictactoe_nonrefactored">tictactoe_nonrefactored</a></p>
     </div>
   </div>
