--- a/code.html
+++ b/code.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title></title>
-  <link href="/stylesheets/wdiexercise.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css"
-  href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
-  <link href="/stylesheets/code.css" rel="stylesheet">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="/javascripts/code.js"></script>
+  <title>Code</title>
 </head>
 <body>
   <div id="menubar" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
@@ -131,5 +124,13 @@
     <br>
     <br>
   </div>
+
+  <link href="/stylesheets/wdiexercise.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css"
+  href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
+  <link href="/stylesheets/code.css" rel="stylesheet">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="/javascripts/code.js"></script>
 </body>
 </html>
