making images fill page with on mobile

--- a/code.html
+++ b/code.html
@@ -20,10 +20,10 @@
   </div>
 
   <!-- add a mobile-responsive png-->
-  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12">
+  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <a href="http://lastichecked.herokuapp.com/">
-        <img class="in-progress" src="/images/lastichecked.png">
+        <img class="image" src="/images/lastichecked.png">
         <!-- <div class="coming_soon">
           <p class="in-progress-text">In Progress...</p>
         </div> -->
@@ -39,7 +39,7 @@
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <a href="https://w09wdiproj.herokuapp.com/">
-        <img class="example" src="/images/w09_wdiproj3.png">
+        <img class="image" src="/images/w09_wdiproj3.png">
       </a>
     </div>
 
@@ -54,7 +54,7 @@
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <a href="http://pantrydotio.herokuapp.com/">
-        <img class="in-progress" src="/images/pantry.io_min.png">
+        <img class="image" src="/images/pantry.io_min.png">
       </a>
     </div>
 
@@ -67,7 +67,7 @@
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <a href="https://tttcmyk.pancakeapps.com/">
-        <img id="ex_2" class="example" src="/images/tictactoe_cmyk.png">
+        <img id="ex_2" class="image" src="/images/tictactoe_cmyk.png">
       </a>
     </div>
 
@@ -80,7 +80,7 @@
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <a href="http://www.lrngo.com/coolstuff">
-        <img class="example" src="/images/lrngo_landing_pages/othercoolstuff.png">
+        <img class="image" src="/images/lrngo_landing_pages/othercoolstuff.png">
       </a>
     </div>
 
