--- a/code.html
+++ b/code.html
@@ -21,7 +21,7 @@
 
   <!-- add a mobile-responsive png-->
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <div class="col-lg-6 col-md-6">
       <a href="http://lastichecked.herokuapp.com/">
         <img class="image" src="/images/lastichecked.png">
         <!-- <div class="coming_soon">
@@ -37,7 +37,7 @@
   </div>
 
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <div class="col-lg-6 col-md-6">
       <a href="https://w09wdiproj.herokuapp.com/">
         <img class="image" src="/images/w09_wdiproj3.png">
       </a>
@@ -52,7 +52,7 @@
   </div>
 
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <div class="col-lg-6 col-md-6">
       <a href="http://pantrydotio.herokuapp.com/">
         <img class="image" src="/images/pantry.io_min.png">
       </a>
@@ -65,7 +65,7 @@
   </div>
 
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <div class="col-lg-6 col-md-6">
       <a href="https://tttcmyk.pancakeapps.com/">
         <img id="ex_2" class="image" src="/images/tictactoe_cmyk.png">
       </a>
@@ -78,7 +78,7 @@
   </div>
 
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+    <div class="col-lg-6 col-md-6">
       <a href="http://www.lrngo.com/coolstuff">
         <img class="image" src="/images/lrngo_landing_pages/othercoolstuff.png">
       </a>
