--- a/code.html
+++ b/code.html
@@ -20,7 +20,7 @@
   </div>
 
   <!-- add a mobile-responsive png-->
-  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
     <div class="col-lg-6 col-md-6">
       <a href="http://lastichecked.herokuapp.com/">
         <img class="image" src="/images/lastichecked.png">
