--- a/code.html
+++ b/code.html
@@ -36,7 +36,7 @@
     </div>
   </div>
 
-  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
     <div class="col-lg-6 col-md-6">
       <a href="https://w09wdiproj.herokuapp.com/">
         <img class="image" src="/images/w09_wdiproj3.png">
@@ -51,7 +51,7 @@
     </div>
   </div>
 
-  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
     <div class="col-lg-6 col-md-6">
       <a href="http://pantrydotio.herokuapp.com/">
         <img class="image" src="/images/pantry.io_min.png">
@@ -64,7 +64,7 @@
     </div>
   </div>
 
-  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
     <div class="col-lg-6 col-md-6">
       <a href="https://tttcmyk.pancakeapps.com/">
         <img id="ex_2" class="image" src="/images/tictactoe_cmyk.png">
@@ -77,7 +77,7 @@
     </div>
   </div>
 
-  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
     <div class="col-lg-6 col-md-6">
       <a href="http://www.lrngo.com/coolstuff">
         <img class="image" src="/images/lrngo_landing_pages/othercoolstuff.png">
@@ -91,7 +91,7 @@
     </div>
   </div>
 
-  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
     <a href="http://www.lrngo.com/coolstuff">
       <img class="left1-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/othercoolstuff.png" alt="">
     </a>
